--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "csv-parse": "^4.15.4",
+    "mustache": "^4.2.0",
     "venom-bot": "^3.0.16"
   }
 }
