--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "csv-parse": "^4.15.4",
     "mustache": "^4.2.0",
     "venom-bot": "^3.0.16"
